--- a/web/layouts/partials/header.html
+++ b/web/layouts/partials/header.html
@@ -45,7 +45,7 @@
 	    }
 	  },
 	  "content": {
-	    "message": "This website use 3rd party cookies for analytics purposes. If you find this message annoying there is a firefox plugin very effective against it.",
+	    "message": "This website use 3rd party cookies for analytics purposes.\nThe webserver doesn't logs any IP address. The server logs are truncated every day or when they reach 1 MB of data.\n However if you find this message annoying there is a firefox plugin very effective against it.",
 	    "link": "I don't care about cookies",
 	    "href": "https://addons.mozilla.org/en-GB/firefox/addon/i-dont-care-about-cookies/"
 	  }
